prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_07.zkc
//error:5:20-21:index 2 out of bounds for array of size 2
fn main() {
  var items:[u8;2]
  items[0] = 1
  var r:u8 = items[2]
  return
}